# serializer version: 1
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch7Gateway-7DOT11_CAPABILITIES-cluster_info0]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'default',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': False,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': False,
      'MAJOR': 7,
      'MAX_PRIMARY_SHARD_SIZE': False,
      'MINOR': 11,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': False,
    }),
    'cluster info': dict({
      'cluster_name': 'docker-cluster',
      'cluster_uuid': 'AlICUdW5Tl2ZxNAA1Mk3fg',
      'name': 'a6680a08c202',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2021-02-08T22:44:01.320463Z',
        'build_flavor': 'default',
        'build_hash': '8ced7813d6f16d2ef30792e2fcde3e755795ee04',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '8.7.0',
        'minimum_index_compatibility_version': '6.0.0-beta1',
        'minimum_wire_compatibility_version': '6.8.0',
        'number': '7.11.0',
      }),
    }),
    'name': '7DOT11_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch7Gateway-7DOT17_CAPABILITIES-cluster_info1]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'default',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': False,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': False,
      'MAJOR': 7,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 17,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': False,
    }),
    'cluster info': dict({
      'cluster_name': 'docker-cluster',
      'cluster_uuid': 'H2qsoRzORwWNxSlhoUpbig',
      'name': 'a8bbdc6f0067',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2022-01-28T08:36:04.875279988Z',
        'build_flavor': 'default',
        'build_hash': 'bee86328705acaa9a6daede7140defd4d9ec56bd',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '8.11.1',
        'minimum_index_compatibility_version': '6.0.0-beta1',
        'minimum_wire_compatibility_version': '6.8.0',
        'number': '7.17.0',
      }),
    }),
    'name': '7DOT17_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch7Gateway-8DOT0_CAPABILITIES-cluster_info2]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'default',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': False,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': False,
      'MAJOR': 8,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 0,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': False,
    }),
    'cluster info': dict({
      'cluster_name': 'docker-cluster',
      'cluster_uuid': '0gTsD5juRwmRElXBCEfk6Q',
      'name': 'b33ad024a3eb',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2022-02-03T16:47:57.507843096Z',
        'build_flavor': 'default',
        'build_hash': '1b6a7ece17463df5ff54a3e1302d825889aa1161',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '9.0.0',
        'minimum_index_compatibility_version': '7.0.0',
        'minimum_wire_compatibility_version': '7.17.0',
        'number': '8.0.0',
      }),
    }),
    'name': '8DOT0_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch7Gateway-8DOT11_CAPABILITIES-cluster_info4]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'default',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': True,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': True,
      'MAJOR': 8,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 11,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': True,
    }),
    'cluster info': dict({
      'cluster_name': 'docker-cluster',
      'cluster_uuid': 'R-PPqCZYQTCMvkpGcyL4mA',
      'name': '640dcce4be79',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2023-11-04T10:04:57.184859352Z',
        'build_flavor': 'default',
        'build_hash': 'd9ec3fa628c7b0ba3d25692e277ba26814820b20',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '9.8.0',
        'minimum_index_compatibility_version': '7.0.0',
        'minimum_wire_compatibility_version': '7.17.0',
        'number': '8.11.0',
      }),
    }),
    'name': '8DOT11_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch7Gateway-8DOT8_CAPABILITIES-cluster_info3]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': None,
      'DATASTREAM_LIFECYCLE_MANAGEMENT': False,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': True,
      'MAJOR': 8,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 8,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': True,
    }),
    'cluster info': dict({
      'cluster_name': 'home-assistant-cluster',
      'cluster_uuid': 'xtsjNokTQGClXbRibWjxyg',
      'name': '775d9437a77088',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2023-10-31',
        'build_hash': '00000000',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '9.7.0',
        'minimum_index_compatibility_version': '8.11.0',
        'minimum_wire_compatibility_version': '8.11.0',
        'number': '8.8.0',
      }),
    }),
    'name': '8DOT8_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch7Gateway-SERVERLESS_CAPABILITIES-cluster_info5]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'serverless',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': True,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': True,
      'MAJOR': 8,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 11,
      'SERVERLESS': True,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': True,
    }),
    'cluster info': dict({
      'cluster_name': 'home-assistant-cluster',
      'cluster_uuid': 'xtsjNokTQGClXbRibWjxyg',
      'name': 'serverless',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2023-10-31',
        'build_flavor': 'serverless',
        'build_hash': '00000000',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '9.7.0',
        'minimum_index_compatibility_version': '8.11.0',
        'minimum_wire_compatibility_version': '8.11.0',
        'number': '8.11.0',
      }),
    }),
    'name': 'SERVERLESS_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch8Gateway-7DOT11_CAPABILITIES-cluster_info0]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'default',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': False,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': False,
      'MAJOR': 7,
      'MAX_PRIMARY_SHARD_SIZE': False,
      'MINOR': 11,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': False,
    }),
    'cluster info': dict({
      'cluster_name': 'docker-cluster',
      'cluster_uuid': 'AlICUdW5Tl2ZxNAA1Mk3fg',
      'name': 'a6680a08c202',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2021-02-08T22:44:01.320463Z',
        'build_flavor': 'default',
        'build_hash': '8ced7813d6f16d2ef30792e2fcde3e755795ee04',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '8.7.0',
        'minimum_index_compatibility_version': '6.0.0-beta1',
        'minimum_wire_compatibility_version': '6.8.0',
        'number': '7.11.0',
      }),
    }),
    'name': '7DOT11_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch8Gateway-7DOT17_CAPABILITIES-cluster_info1]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'default',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': False,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': False,
      'MAJOR': 7,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 17,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': False,
    }),
    'cluster info': dict({
      'cluster_name': 'docker-cluster',
      'cluster_uuid': 'H2qsoRzORwWNxSlhoUpbig',
      'name': 'a8bbdc6f0067',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2022-01-28T08:36:04.875279988Z',
        'build_flavor': 'default',
        'build_hash': 'bee86328705acaa9a6daede7140defd4d9ec56bd',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '8.11.1',
        'minimum_index_compatibility_version': '6.0.0-beta1',
        'minimum_wire_compatibility_version': '6.8.0',
        'number': '7.17.0',
      }),
    }),
    'name': '7DOT17_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch8Gateway-8DOT0_CAPABILITIES-cluster_info2]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'default',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': False,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': False,
      'MAJOR': 8,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 0,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': False,
    }),
    'cluster info': dict({
      'cluster_name': 'docker-cluster',
      'cluster_uuid': '0gTsD5juRwmRElXBCEfk6Q',
      'name': 'b33ad024a3eb',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2022-02-03T16:47:57.507843096Z',
        'build_flavor': 'default',
        'build_hash': '1b6a7ece17463df5ff54a3e1302d825889aa1161',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '9.0.0',
        'minimum_index_compatibility_version': '7.0.0',
        'minimum_wire_compatibility_version': '7.17.0',
        'number': '8.0.0',
      }),
    }),
    'name': '8DOT0_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch8Gateway-8DOT11_CAPABILITIES-cluster_info4]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'default',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': True,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': True,
      'MAJOR': 8,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 11,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': True,
    }),
    'cluster info': dict({
      'cluster_name': 'docker-cluster',
      'cluster_uuid': 'R-PPqCZYQTCMvkpGcyL4mA',
      'name': '640dcce4be79',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2023-11-04T10:04:57.184859352Z',
        'build_flavor': 'default',
        'build_hash': 'd9ec3fa628c7b0ba3d25692e277ba26814820b20',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '9.8.0',
        'minimum_index_compatibility_version': '7.0.0',
        'minimum_wire_compatibility_version': '7.17.0',
        'number': '8.11.0',
      }),
    }),
    'name': '8DOT11_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch8Gateway-8DOT8_CAPABILITIES-cluster_info3]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': None,
      'DATASTREAM_LIFECYCLE_MANAGEMENT': False,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': True,
      'MAJOR': 8,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 8,
      'SERVERLESS': False,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': True,
    }),
    'cluster info': dict({
      'cluster_name': 'home-assistant-cluster',
      'cluster_uuid': 'xtsjNokTQGClXbRibWjxyg',
      'name': '775d9437a77088',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2023-10-31',
        'build_hash': '00000000',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '9.7.0',
        'minimum_index_compatibility_version': '8.11.0',
        'minimum_wire_compatibility_version': '8.11.0',
        'number': '8.8.0',
      }),
    }),
    'name': '8DOT8_CAPABILITIES',
  })
# ---
# name: Test_Elasticsearch_Gateway.test_capabilities[Elasticsearch8Gateway-SERVERLESS_CAPABILITIES-cluster_info5]
  dict({
    'capabilities': dict({
      'BUILD_FLAVOR': 'serverless',
      'DATASTREAM_LIFECYCLE_MANAGEMENT': True,
      'IGNORE_MISSING_COMPONENT_TEMPLATES': True,
      'MAJOR': 8,
      'MAX_PRIMARY_SHARD_SIZE': True,
      'MINOR': 11,
      'SERVERLESS': True,
      'SUPPORTED': True,
      'TIMESERIES_DATASTREAM': True,
    }),
    'cluster info': dict({
      'cluster_name': 'home-assistant-cluster',
      'cluster_uuid': 'xtsjNokTQGClXbRibWjxyg',
      'name': 'serverless',
      'tagline': 'You Know, for Search',
      'version': dict({
        'build_date': '2023-10-31',
        'build_flavor': 'serverless',
        'build_hash': '00000000',
        'build_snapshot': False,
        'build_type': 'docker',
        'lucene_version': '9.7.0',
        'minimum_index_compatibility_version': '8.11.0',
        'minimum_wire_compatibility_version': '8.11.0',
        'number': '8.11.0',
      }),
    }),
    'name': 'SERVERLESS_CAPABILITIES',
  })
# ---
